<resources>
    <string name="app_name">TranslationAPP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="emailHint">Email</string>
    <string name="Hint">Password</string>
    <string name="confimpass">Confirm Password</string>
    <string name="registerTextView">Register</string>
    <string name="registerlabel">Not Registerd? Sign-Up here.</string>

    <string name="credits">Credits</string>
    <string name="appdec">Break language barriers effortlessly! Our text translation app delivers quick and accurate translations for smooth communication. Translate with ease, anytime, anywhere. Your passport to a world without language barriers.</string>
    <string name="groupmemb">Creators: Hassan Ihsan</string>
</resources>